# lareview

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  all_comments.txt  beer_task.json  debug_diff.rs  debug_mcp.sh  deny.toml  fix-diff-alignment.patch  mise.toml  rust-toolchain.toml  send_tasks.json  tauri.conf.json  test_regex.py  test_regex.rs
.claude/commands/: release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  release.yml  security.yml
_landing/: index.html  pnpm-lock.yaml
_landing/styles/: landing.css
assets/: README.md
capabilities/: desktop.json
docs/: ACP_DEEP_DIVE.md  ARCHITECTURE.md  DATA_STREAMING_DEEP_DIVE.md  DEVELOPMENT.md  README.md  THREADS_PLAN.md
examples/: fake_acp_agent.rs
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Common/: ConfirmationModal.tsx  ErrorBoundary.tsx  ImpactBadge.tsx  Mermaid.test.ts  Mermaid.tsx  Modal.tsx  Select.tsx  Tooltip.tsx  UpdateModal.tsx
frontend/src/components/DiffViewer/: DiffViewer.tsx  GutterMenu.tsx
frontend/src/components/Generate/: AgentConfigPanel.tsx  AgentSelector.tsx  DiffEditorPanel.tsx  DiffStats.tsx  GenerateView.tsx  LiveActivityFeed.tsx  PlanOverview.tsx  PlanSteps.tsx  PrInput.tsx  Timeline.tsx  VcsInputCard.tsx  ViewModeToggle.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/Learning/: LearningView.tsx
frontend/src/components/Repos/: ReposView.tsx
frontend/src/components/Review/: AddFeedbackModal.tsx  CategoryBadge.tsx  DiffSkeleton.tsx  EmptyState.tsx  ErrorState.tsx  FeedbackDetail.tsx  FeedbackList.tsx  PushToGitHubModal.tsx  ReviewSidebar.tsx  ReviewToolbar.tsx  ReviewView.tsx  ReviewViewSkeleton.tsx  RulePopover.tsx  SelectionModal.tsx  (+3 more)
frontend/src/constants/: animations.ts  icons.tsx  query-config.ts
frontend/src/contexts/: GenerationContext.test.tsx  GenerationContext.tsx  generation-context.ts  useGeneration.ts
frontend/src/hooks/: useAgents.ts  useDelayedLoading.ts  useFeedback.ts  useIssueChecks.ts  useLearnedPatterns.ts  useMergeConfidence.ts  useParsedDiff.ts  useRepos.ts  useReview.ts  useReviews.ts  useRuleLibrary.ts  useRules.ts  useSettings.ts  useTasks.ts  useTauri.ts  useUpdateCheck.ts
frontend/src/lib/: query-client.ts  query-keys.ts  version.ts
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
frontend/src/test/: mocks.ts  setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: diffParser.ts  languages.ts  mermaidUtils.ts
landing/: index.html  landing.css  package.json  pnpm-lock.yaml  tailwind.config.js
migrations/: 0009_update_feedback_status_constraint.sql  0010_rename_thread_to_feedback.sql  README.md
scripts/: build_macos_app.sh
src/: assets.rs  compact_learnings.hbs  generate_tasks.hbs  lib.rs  main.rs  prompts.rs
src/acp/: agent_discovery.rs  agent_trait.rs  diff_parser.rs  mod.rs  task_generator.rs  task_mcp_server.rs
src/acp/agents/: codex.rs  gemini.rs  mistral.rs  mod.rs  qwen.rs
src/application/: mod.rs
src/application/review/: export.rs  mod.rs  ordering.rs  rules.rs  tests.rs
src/commands/: mod.rs
src/data/: db.rs  mod.rs  repository.rs
src/diagram/: d2.rs
src/domain/: error.rs  feedback.rs  issue_check.rs  learned_pattern.rs  merge_confidence.rs  mod.rs  repo.rs  review.rs  rule.rs  rule_library.rs  snapshot.rs  task.rs
src/infra/: app_config.rs  brew.rs  d2.rs  diagram.rs  diff.rs  diff_index.rs  editor.rs  git.rs  github.rs  hash.rs  mod.rs  platform.rs  shell.rs
src/infra/acp/: agent_discovery.rs  agent_trait.rs  mod.rs
src/infra/cli/: args.rs  diff.rs  mod.rs  pending.rs  repo.rs
src/infra/db/: database.rs  mod.rs
src/infra/diagram/: dsl.rs  mod.rs  models.rs  parsing.rs  tests.rs
src/infra/diff/: index.rs  mod.rs  parser.rs
src/infra/vcs/: github.rs  gitlab.rs  mod.rs  registry.rs  snapshot.rs  snapshot_test.rs  traits.rs
src/prompts/: generate_tasks.hbs  mod.rs
src/state/: mod.rs
src/ui/: app.rs  icons.rs  layout.rs  mod.rs  spacing.rs  theme.rs  typography.rs  window.rs
src/ui/animations/: cyber.rs
src/ui/app/: generate_input.rs  header.rs  init.rs  messages.rs  mod.rs  overlay.rs  polling.rs  review_ops.rs  root.rs  state.rs  timeline.rs  ui_memory.rs  update.rs
src/ui/components/: action_button.rs  agent_selector.rs  badge.rs  columns.rs  cyber_button.rs  diagram.rs  diff.rs  diff_parse.rs  diff_view.rs  header.rs  list_item.rs  markdown.rs  mod.rs  patch_convert.rs  pills.rs  popup_selector.rs  repo_selector.rs  rotating_icon.rs  selection_chips.rs  status.rs  tabs.rs  task_status_chip.rs  theme.rs
src/ui/views/: generate_view.rs  home.rs  mod.rs  repos.rs  repos_view.rs  review_view.rs  settings.rs  settings_view.rs
src/utils/: os.rs
test_data/seed/: calcom_audit.diff  review.json  tasks.json
tests/: database_workflow_integration.rs  fake_agent_integration.rs  gitlab_diff_fetch_integration.rs  plan_stress_test.rs  review_workflow_integration.rs  vcs_registry_integration.rs
(+168 files in other folders)
