[package]
name = "lareview"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.2"
eframe = "0.33.2"
egui_extras = { version = "0.33.2", features = ["svg", "image"] }
log = "0.4"
env_logger = "0.11.3"

agent-client-protocol = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
which = "6"
anyhow = "1.0"
async-trait = "0.1"
pmcp = "1.8.6"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
unidiff = "0.4.0"
similar = "2.7.0"
handlebars = "6.3.2"
once_cell = "1.21.3"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
egui-phosphor = "0.11.0"
image = "0.25"
regex = "1"
lazy_static = "1.4"
twox-hash = "1.6"
roxmltree = "0.19"
