[package]
name = "lareview"
version = "0.0.11"
edition = "2024"
license = "MIT"
description = "LaReview is a desktop code review companion that generates intent-driven review plans with AI."
repository = "https://github.com/puemos/lareview"
homepage = "https://github.com/puemos/lareview"
readme = "README.md"
keywords = ["code-review", "gui", "ai", "acp", "developer-tools"]
categories = ["development-tools", "gui"]

[dependencies]
egui = "0.33.2"
eframe = "0.33.2"
egui_extras = { version = "0.33.2", features = ["svg", "image", "svg_text"] }
log = "0.4"
env_logger = "0.11.3"

agent-client-protocol = "0.9"
grep = "0.4"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
which = "6"
anyhow = "1.0"
async-trait = "0.1"
pmcp = "1.8.6"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
unidiff = "0.4.0"
similar = "2.7.0"
handlebars = "6.3.2"
once_cell = "1.21.3"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
toml = "0.8"
toml_edit = "0.22"
home = "0.5"
egui-phosphor = "0.11.0"
image = "0.25"
regex = "1"
lazy_static = "1.4"
twox-hash = "1.6"
roxmltree = "0.19"
glam = "0.30.9"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
pulldown-cmark = "0.12"
base64 = "0.22.1"
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
fontdb = "0.23"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }