[package]
name = "lareview"
version = "0.0.30"
edition = "2024"
default-run = "lareview"

license = "MIT OR Apache-2.0"
autobins = false
description = "LaReview is a desktop code review companion that generates intent-driven review plans with AI."
repository = "https://github.com/puemos/lareview"
homepage = "https://github.com/puemos/lareview"
readme = "README.md"
keywords = ["code-review", "gui", "ai", "acp", "developer-tools"]
categories = ["development-tools", "gui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
log = "0.4"
env_logger = "0.11.3"

agent-client-protocol = "0.9"
grep = "0.4"
ignore = "0.4"
globset = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
which = "6"
anyhow = "1.0"
thiserror = "2"
async-trait = "0.1"
libc = "0.2"
pmcp = "1.8.6"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
unidiff = "0.4.0"
handlebars = "6.3.2"
once_cell = "1.21.3"
toml = "0.8"
toml_edit = "0.22"
home = "0.5"
image = "0.25"
regex = "1"
lazy_static = "1.4"
twox-hash = "1.6"
roxmltree = "0.19"
uuid = { version = "1", features = ["v4"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
pulldown-cmark = "0.12"
base64 = "0.22.1"
tiny-skia = "0.11"
fontdb = "0.23"
lru = "0.12"

tauri = { version = "2.9.5", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[lib]
name = "lareview"
path = "src/lib.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "lareview"
path = "src/main.rs"

[[example]]
name = "fake_acp_agent"
path = "examples/fake_acp_agent.rs"

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
